[package]
name = "spec_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
crc32fast = "1.3.2"
hex = {version = "0.4.3", features = ["serde"] }
ic-cdk = "0.7.0"
serde = "1.0.152"
sha2 = "0.10.6"

[profile.release]
lto = true
