[package]
name = "wasm_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
serde_json = "1.0.96"
wasm-bindgen = "0.2.84"
wasm-encoder = "0.20.0"
wasmparser = "0.95.0"

[profile.release]
lto = true
