[package]
name = "wasm_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ['std', 'allow_alt_compress']
allow_alt_compress = []
fallback_separator = []
std = []

[dependencies]
candid = "0.8.4"
getrandom = { version = "0.2.9", features=['js'] }
miracl_core_bls12381 = { version="4.2.2", default-features=false, features= ['wasm-bindgen', 'allow_alt_compress'] } 
serde_json = "1.0.96"
wasm-bindgen = "0.2.84"
wasm-encoder = "0.20.0"
wasmparser = "0.95.0"

[dev-dependencies]
hex-literal = "0.4.1"

[profile.release]
lto = true
opt-level = 'z'
